# salt-ext-elasticsearch8

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .tagpr  CHANGELOG.md  LICENSE.new  README.md  README.new  noxfile.py  pyproject.toml  setup.cfg  setup.py
.github/: release-notes.yml
.github/workflows/: publish.yml  release.yml  test.yml
.pre-commit-hooks/: check-cli-examples.py
docs/: all.rst  conf.py  index.rst
docs/ref/: saltext.elasticsearch8.modules.rst  saltext.elasticsearch8.returners.rst  saltext.elasticsearch8.rst  saltext.elasticsearch8.states.rst  saltext.rst
src/saltext/elasticsearch8/: loader.py
src/saltext/elasticsearch8/modules/: elasticsearch8_mod.py
src/saltext/elasticsearch8/returners/: elasticsearch8_mod.py
src/saltext/elasticsearch8/states/: elasticsearch8_mod.py
tests/: conftest.py
tests/integration/modules/: test_elasticsearch8.py
tests/support/: mock.py  unit.py
tests/support/elasticsearch/: elasticsearch_mock8.py
tests/unit/modules/: test_elasticsearch8.py
tests/unit/returners/: test_elasticsearch8.py
tests/unit/states/: test_elasticsearch8.py
