[build-system]
requires = [
    "setuptools>=50.3.2",
    "wheel",
    "setuptools-declarative-requirements",
    "setuptools_scm[toml]>=3.4",
    "python-semantic-release>=7.16.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/saltext/elasticsearch8/version.py"
write_to_template = "__version__ = \"{version}\""

[tool.black]
line-length = 100

[tool.semantic_release]
version_variable = "src/saltext/elasticsearch8/version.py:__version__"
version_source = "tag"
upload_to_pypi = false
commit_subject = "chore(release): {version} [skip ci]"
commit_author = "semantic-release"
commit_email = "devops@local"
build_command = false
changelog_file = false
major_on_zero = false
