[metadata]
name = saltext.elasticsearch8
description = Module to manage Eleasticsearch8
long_description = file: README.md
long_description_content_type = text/markdown
author = Cesar Sanchez
author_email = cesan3@gmail.com
keywords = salt-extension
url = https://github.com/cesan3/salt-ext-elasticsearch8
project_urls =
    Source=https://github.com/cesan3/salt-ext-elasticsearch8
    Tracker=https://github.com/cesan3/salt-ext-elasticsearch8/issues
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
platforms = any

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find_namespace:
python_requires = >= 3.9
setup_requires =
  wheel
  setuptools>=50.3.2
  setuptools_scm[toml]>=3.4
  setuptools-declarative-requirements
install_requires =
  salt>=3005
  # Add other module install requirements above this line

[options.packages.find]
where = src
exclude =
    tests

# When targetting Salt < 3003, you can remove the other 'options.entry_points' section and use this one
#[options.entry_points]
#salt.loader=
#
#  module_dirs = saltext.elasticsearch8.loader:get_module_dirs
#
#  returner_dirs = saltext.elasticsearch8.loader:get_returner_dirs
#
#  states_dirs = saltext.elasticsearch8.loader:get_states_dirs
#

[options.entry_points]
salt.loader=
  saltext.elasticsearch8 = saltext.elasticsearch8


[options.extras_require]
tests =
  Jinja2
  pytest
  pytest-salt-factories
  elasticsearch>=8.6.0
  mock>=5.0.1
dev =
  nox==2021.6.12
  pre-commit==2.13.0
  pylint
  SaltPyLint
docs =
  enchant
  sphinx
  sphinx-copybutton
  sphinx-prompt
  sphinxcontrib-spelling
  importlib_metadata; python_version < "3.8"
docsauto =
  sphinx-autobuild

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[sdist]
owner = root
group = root
